# chainladder-python

./: .coveragerc  .gitignore  .pypirc  .travis.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  ChainLadder.py  LICENSE  MANIFEST.in  MackChainLadderFunctions.py  RDataConverter.py  README.md  README.rst  Triangles.py  __init__.py  ata.py  checksum.csv  checkthis.csv  conftest.py  core_test_suite_status.md  environment-dev.yaml  environment-docs.yaml  environment-test.yaml  final_validation.py  main.py  prot2  pyproject.toml  pyrightconfig.json  readthedocs.yaml  refactor_example.py  requirements-dev.txt  requirements.txt  setup.py  simple_test.py  simple_test_execution.py  test_chainladder.py  test_downstream_integration.py  test_link_ratio.py  test_runner.py  (+1 more)
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: asv.conf.json  benchmarks.py
chainladder/: BootstrapReserve.py  ChainLadder.py  Chainladder.py  Classes.py  MackChainLadderFunctions.py  MackChainladder.py  MunichChainladder.py  RDataConverter.py  TestCases.py  Triangle.py  Triangles.py  UtilityFunctions.py  __init__.py  ata.py  conftest.py  datasets.py  hi_bugbot.py  utility_functions.py
ci/: environment-latest.yaml  environment-test.yaml
ci_scripts/: conda_r_requirements.txt  conda_requirements.txt  flake8_diff.sh  install.sh
data/: ABC  GenIns  M3IR5  MCLincurred  MCLpaid  MW2008  MW2014  Mortgage  RAA  UKMotor  USAAincurred  USAApaid  auto  auto$CommercialAutoPaid  auto$PersonalAutoIncurred  qincurred  qpaid
docs/: BootstrapExample.ipynb  BootstrapExample.rst  BootstrapReserve.rst  ChainLadder.rst  ChainLadder_deterministic.rst  Classes.rst  Datasets.rst  Examples.rst  MackChainLadder.rst  MackExample.ipynb  MackExample.rst  Makefile  Modules.rst  Modules_deterministic.rst  Modules_stochastic.rst  MunichChainLadder.rst  MunichExample.ipynb  MunichExample.rst  README.md  Triangle.rst  Untitled7.rst  Utilities.rst  WRTO.rst  _config.yml  _toc.yml  adjustments.ipynb  citations.rst  conf.py  contents.rst  contributing.rst  dataset.rst  development.ipynb  development_toc.rst  documentation.rst  examples_toc.md  glossary.rst  guides_intro.md  index.md  index.rst  install.rst  (+39 more)
examples/: README.txt  plot_advanced_triangle.py  plot_ave_analysis.py  plot_benktander.py  plot_berqsherm_case.py  plot_berqsherm_closure.py  plot_bf_apriori_from_cl.py  plot_bondy_sensitivity.py  plot_bootstrap.py  plot_bootstrap_comparison.py  plot_callable_dev_constant.py  plot_capecod.py  plot_capecod_onlevel.py  plot_clarkldf.py  (+18 more)
(+560 files in other folders)
